# Uploader

./: README.md
client/: push
server/: CMakeLists.txt  main.cpp
